<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginHeading"
        android:textStyle="bold"
        android:textSize="@dimen/MainHeadingTextSize"
        android:id="@+id/tvWelcomeBack"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/MainHeadingTopMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginMessage"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
        android:id="@+id/tvMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/MessageTextSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/MessageMarginTop"
    />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        android:id="@+id/loginEmailLayout"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginHorizontal="@dimen/FieldsHorizontalMargin"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/EmailInputFieldText"
            android:id="@+id/LoginEmail"
            android:background="@color/inputFieldColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginEmailLayout"
        android:id="@+id/loginPasswordLayout"
        android:layout_marginTop="@dimen/InputFieldTopMargin"
        android:layout_marginHorizontal="@dimen/FieldsHorizontalMargin"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/PasswordInputFieldText"
            android:id="@+id/LoginPassword"
            android:background="@color/inputFieldColor"
            android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnLoginColor"
        android:textColor="@color/white"
        android:text="@string/LoginButtonText"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordLayout"
        android:layout_marginTop="@dimen/ButtonTopMargin"
        android:layout_marginHorizontal="@dimen/FieldsHorizontalMargin"
        android:id="@+id/btnLogin"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:text="Forgot Password"
        android:textColor="@color/btnLoginColor"
        android:textStyle="bold"
        android:textSize="@dimen/MessageTextSize"
        android:layout_marginTop="@dimen/ButtonTopMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tvForgotPassword"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoAccountMessage"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginStart="@dimen/_100dp"
        android:id="@+id/tvNoAccountMessage"
        android:textStyle="bold"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toRightOf="@id/tvNoAccountMessage"
        android:layout_marginLeft="@dimen/_5dp"
        android:id="@+id/tvSignUp"
        android:textColor="@color/btnLoginColor"
        android:textStyle="bold"
    />


</androidx.constraintlayout.widget.ConstraintLayout>